replace png with jpg

--- a/pages/familytree.html
+++ b/pages/familytree.html
@@ -1,6 +1,6 @@
 <div style="border-radius: 10px/10px;background: #B9D998;">
 	<div style="width:1024px;position:relative; margin: 0 auto;">
-		<img class="familytree" src="./images/familytree.png" style="max-width: 200%;  height: auto; width:auto\9;margin:auto; display:block;" usemap="#familymember" maphighlight/>
+		<img class="familytree" src="./images/familytree.jpg" style="max-width: 200%;  height: auto; width:auto\9;margin:auto; display:block;" usemap="#familymember" maphighlight/>
 		<map  name="familymember" id="familymember">
 			<area ng-repeat="person in persons" alt="" title="" id="{{person.name}}" shape="{{person.shape}}" coords="{{person.coords}}" ng-click="personclick(person)" data-maphilight="{'strokeColor':'0000ff','strokeWidth':5,'fillColor':'00ff00','fillOpacity':0.6}"/>
 			<span href ="#" class="backer"></span>
