--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,6 +1,6 @@
 
 <div class="row" style="position:relative; margin: 0 auto;">
-	<img src="../images/topbanner.png" style="width: 1200px;"></img>
+	<img src="../images/topbanner.jpg" style="width: 1200px;"></img>
 </div> 
 <div class="row" style="margin-top: -10px; margin-left: 0px; margin-right: 0px">
 	<div class="col-md-8" style="padding-right:5; padding-left:0;" >
@@ -55,7 +55,7 @@
 					Tour to Changbai Moutain! We've kept talking about it for years, and finally have the tickets booked.
 				</p>
 
-				<img src="./images/event.png" style="display: block;width: 360px; height: 170px; margin: 0 auto">
+				<img src="./images/event.jpg" style="display: block;width: 360px; height: 170px; margin: 0 auto">
 				
 			</div>
 		</div>
