--- a/pages/stories.html
+++ b/pages/stories.html
@@ -13,7 +13,7 @@
 						The same year, we had a trip to Cheng De. This is the farest place I'd been as tourist during my Bechelor time.
 					</p>
 				</div>
-				<div class="cntl-image"><img src="./images/timeline/1.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/1.jpg"></div>
 				<div class="cntl-icon cntl-center">'01</div>
 			</div>
 
@@ -28,7 +28,7 @@
 					</p>
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/2.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/2.jpg"></div>
 				<div class="cntl-icon cntl-center">'04</div>
 			</div>
 
@@ -40,7 +40,7 @@
 					</p>
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/3.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/3.jpg"></div>
 				<div class="cntl-icon cntl-center">'04</div>
 			</div>
 
@@ -56,7 +56,7 @@
 
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/4.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/4.jpg"></div>
 				<div class="cntl-icon cntl-center">'05</div>
 			</div>
 
@@ -71,7 +71,7 @@
 					</p>
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/5.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/5.jpg"></div>
 				<div class="cntl-icon cntl-center">'05</div>
 			</div>
 			<div class="cntl-state">
@@ -85,7 +85,7 @@
 					</p>
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/6.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/6.jpg"></div>
 				<div class="cntl-icon cntl-center">'08</div>
 			</div>
 			<div class="cntl-state">
@@ -99,7 +99,7 @@
 					</p>
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/7.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/7.jpg"></div>
 				<div class="cntl-icon cntl-center">'08</div>
 			</div>
 			<div class="cntl-state">
@@ -113,7 +113,7 @@
 					</p>
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/8.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/8.jpg"></div>
 				<div class="cntl-icon cntl-center">'11</div>
 			</div>
 
@@ -128,7 +128,7 @@
 					</p>	
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/9.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/9.jpg"></div>
 				<div class="cntl-icon cntl-center">'14</div>
 			</div>
 
@@ -141,7 +141,7 @@
 					<p>We are not huge fan of travelling, but do get a lot of good memories on the way.</p>	
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/life.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/life.jpg"></div>
 				<div class="cntl-icon cntl-center">&#x2600</div>
 			</div>
 			<div class="cntl-state">
@@ -153,7 +153,7 @@
 					<p>It's quite rare to stay in a company for that long, comparing to my classmates. But luckily, I am still doing software, with great passion in it. </p>	
 				</div>
 
-				<div class="cntl-image"><img src="./images/timeline/work.png"></div>
+				<div class="cntl-image"><img src="./images/timeline/work.jpg"></div>
 				<div class="cntl-icon cntl-center">&#x2692</div>
 			</div>
 
