add weather by $http call

--- a/home.html
+++ b/home.html
@@ -14,19 +14,19 @@
 	<script type='text/javascript' src='./js/jquery.easing.1.3.js'></script>
 	<script type='text/javascript' src='./js/camera.min.js'></script>
 	<script type="text/javascript" src="../js/jquery.maphilight.js"></script>
-	<title>Zhigao's Home</title>
+	<title>Zhigao's Site</title>
 </head>
 <body  style="background-color:#E2F1D0;">
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand active" href="#">Welcome to Zhigao's Home</a>
+				<a class="navbar-brand active" href="#">Welcome to Zhigao's Site</a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav navbar-center">
-					<li class="active"><a href="#">Sweet Home</a></li>
-					<li><a href="#/stories">Our Stories</a></li>
-					<li><a href="#/footprint">Our Footprint</a></li>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#/stories">Stories</a></li>
+					<li><a href="#/footprint">Footprint</a></li>
 					<li><a href="#/familytree">Family Tree</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
