support mobile layout

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -3,7 +3,7 @@
 	<img src="../images/topbanner.jpg" style="width: 1200px;"></img>
 </div> 
 <div class="row" style="margin-top: -10px; margin-left: 0px; margin-right: 0px">
-	<div class="col-md-8" style="padding-right:5; padding-left:0;" >
+	<div class="col-sm-8 col-xs-12 col-md-8" style="padding-right:5; padding-left:0;" >
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 600px; " > 
 			<div style="padding-left: 10px; padding-right: 10px; ">
 				<h3 style="padding-top: 10px;">Welcome</h3>
@@ -46,7 +46,7 @@
 
 		</div>
 	</div>
-	<div class="col-md-4" style="padding-right:0; padding-left:0;" >
+	<div class="col-sm-4 col-xs-6 col-md-4" style="padding-right:0; padding-left:0;" >
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 295px; margin-bottom:-10px" > 
 			<div style="padding-left: 10px; padding-right: 10px; ">
 				<h3 style="padding-top: 10px;">Coming event</h3>
@@ -71,13 +71,13 @@
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 100px; ">  
 			<div style="padding-left: 10px; padding-right: 10px; ">
 				<div class="row">
-					<div class="col-md-8" >
+					<div class="col-sm-8 col-xs-12 col-md-8" >
 					<p style="font-size: 180%; padding-top: 5px">{{weather.city}}</p>
 					<hr style="margin-top: -5px;" />
 					<p style="margin-top: -15px; font-size: 110%" >{{weather.weather}}, {{weather.degree}}°C<br>
 					Wind speed: {{weather.windspeed}}m/s</p>
 					</div>	
-					<div class="col-md-4">
+					<div class="col-sm-4 col-xs-6 col-md-4">
 						<img src="{{weather.icon}}" style="width:100px;" />
 					</div>	
 				</div>
