--- a/pages/footprint.html
+++ b/pages/footprint.html
@@ -1,8 +1,8 @@
 <div id="baidumap" style="height: 600px; overflow: hidden;margin-bottom:20px;">
 </div>
 
-<div class="row">
-	<div class="col-md-8" >
+<div class="row" style="margin-top: -10px; margin-left: 0px; margin-right: 0px">
+	<div class="col-sm-8 col-xs-12 col-md-8" style="padding-right:5; padding-left:0;">
 	<div style="border-radius: 10px/10px;background: #A8DC3C; height: 500px;" > 
 		<div class="camera_wrap camera_azure_skin" id="footprintcamera" camslider  style="margin-top:20px;">
 			<div ng-repeat="img in imagesource" data-thumb="{{img.datathumb}}" data-src="{{img.datasrc}}">
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 	</div>
-	<div class="col-md-4" >
+	<div class="col-sm-4 col-xs-6 col-md-4" style="padding-right:0; padding-left:0;">
 		<div style="border-radius: 10px/10px;background: #B9D998; height: 500px;" > 
 			<div style="padding-left: 20px; padding-top:20px; font-size: 200%; font-weight: bold;">{{activePlace.location}}</div>
 			<div style="padding-left: 20px; padding-right: 20px" ng-bind-html="activePlace.description">
