--- a/pages/familytree.html
+++ b/pages/familytree.html
@@ -1,4 +1,4 @@
-<div style="border-radius: 10px/10px;background: #B9D998;">
+<div class="roundregion">
 	<div style="width:1024px;position:relative; margin: 0 auto;">
 		<img class="familytree" src="./images/familytree.jpg" style="max-width: 200%;  height: auto; width:auto\9;margin:auto; display:block;" usemap="#familymember" maphighlight/>
 		<map  name="familymember" id="familymember">
@@ -7,10 +7,10 @@
 		</map>
 	</div>
 </div>
-<div style="border-radius: 10px/10px;background: #A8DC3C; height: 300px; margin-top: -10px; " > 
-<div style="padding-left: 10px; padding-right: 10px; ">
-	<h3 style="padding-top: 10px;">About Family</h3>
-	<hr style="margin-top: -5px;" />
+<div class="roundregion" style="height: 300px; margin-top: -10px; " > 
+<div class="content-mediumpadding">
+	<h3  class="h3-padding">About Family</h3>
+	<hr class="hr-margin" />
 	<p>{{personintro}}</p>
 </div>		
 </div>	
