--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel='stylesheet' id='camera-css' href='./css/camera.css' type='text/css' media='all'> 
 	<link rel='stylesheet' id='camera-css' href='./css/bootstrap.min.css' type='text/css' media='all'> 
 	<link rel="stylesheet" type="text/css" href="./css/cntl.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/site.css">
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3p1Wl37n5VGpWgbU3RtGgrfL"></script>
 	<script type='text/javascript' src="./js/angular.min.js"></script>
 	<script type='text/javascript' src="./js/angular-route.min.js"></script>
@@ -14,19 +15,19 @@
 	<script type='text/javascript' src='./js/jquery.easing.1.3.js'></script>
 	<script type='text/javascript' src='./js/camera.min.js'></script>
 	<script type="text/javascript" src="../js/jquery.maphilight.js"></script>
-	<title>Zhigao's Home</title>
+	<title>Zhigao's Site</title>
 </head>
 <body  style="background-color:#E2F1D0;">
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand active" href="#">Welcome to Zhigao's Home</a>
+				<a class="navbar-brand active" href="#">Welcome to Zhigao's Site</a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav navbar-center">
-					<li class="active"><a href="#">Sweet Home</a></li>
-					<li><a href="#/stories">Our Stories</a></li>
-					<li><a href="#/footprint">Our Footprint</a></li>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#/stories">Stories</a></li>
+					<li><a href="#/footprint">Footprint</a></li>
 					<li><a href="#/familytree">Family Tree</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
