--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="../js/jquery.maphilight.js"></script>
 	<title>Zhigao's Site</title>
 </head>
-<body  style="background-color:#E2F1D0;">
-	<nav class="navbar navbar-inverse">
+<body  style="background-color:#E2F1D0; padding-top: 60px">
+	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand active" href="#">Welcome to Zhigao's Site</a>
