add contact info

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
 					<li><a href="#/familytree">Family Tree</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-user"></span>Contact us</a></li>
+					<li><a href="mailto://zhuzhigao@sina.cn"><span class="glyphicon glyphicon-envelope"></span> Contact Me</a></li>
 				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="http://www.linkedin.com/profile/view?id=AAIAAAZAWIABowavZ8zJhVQypiyB7QLCuTSLlb8&trk=nav_responsive_tab_profile"><span class="glyphicon glyphicon-user"></span> Zhigao @ LinkedIn</a></li>
+				</ul>
+
 			</div>
 		</div>
 	</nav>
